[package]
name = "spreadsheet"
version = "0.2.0"
authors = ["Mauro Lacy <maurolacy@users.noreply.github.com>"]
edition = "2021"
description = "Implement a spread-sheet with caching and expressions"
license = "GPL-3.0-or-later"
repository = "https://github.com/maurolacy/SpreadSheet"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
santiago = "1.3.1"
thiserror = "1.0.34"
